fixing spacing issues on hero

--- a/styles/index.css
+++ b/styles/index.css
@@ -90,7 +90,7 @@ body {
     align-self: center;
     justify-self: center;
 
-    opacity: .40;
+    opacity: .30;
  }
 .hero-img img {
     max-width: 800px;
@@ -122,8 +122,6 @@ body {
 
     align-self: center;
     justify-self: center;
-
-    width: 80%;
 
 }
 .hero-text-subtitle {
